ncc/testsuite/negative/no-ctors.n
class C 
  { x () : void {}
    protected this () {}
 }

class M {
  static g () : C { C(3) }    // E: type `C' has no accessible constructors
}
